fix table layout issue

--- a/packages/system/public/assets/css/sheet.css
+++ b/packages/system/public/assets/css/sheet.css
@@ -46,7 +46,7 @@ body {
 	border-color: #888888;
 }
 
-table tr{
+table.score tr{
 	text-align: center;
 }
 
